fix: stop map from being too big

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ th {
     top: 0.5em;
     img {
         border: .5em solid #230c33;
-        border-radius: 1em;    
+        border-radius: 1em;
+        width: 94%;
     }
     .dark {
         filter: invert();
